--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "fs-extra": "^11.2.0",
     "node-cron": "^3.0.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "qs": "^6.13.1"
   }
 }
